PRAKTIKUM 4 Menjawab soal memberi warna latar belakang

--- a/tw.html
+++ b/tw.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./output.css">
 </head>
-<body>
+<body class="bg-blue-600">
     <button class="px-4 py-2 bg-blue-600 text-white rounded-lg">
         Simpan
     </button>
